
           History file for geometry/solids/test/fred
	   ------------------------------------------
This file should be used to briefly summarize all major modifications
introduced in the code and keep track of all tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Apr 20, 2001 - G.Cosmo
----------------------
- Updates for migration to STL vector, modified FredTrackCheck[.hh.cc].

Nov 09, 2000 - G.Cosmo
----------------------
- Created.